<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/timeManagementApp"
        android:textColor="#6B85B0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="295dp"
        android:layout_height="47dp"
        android:layout_marginTop="444dp"
        android:fontFamily="@font/roboto"
        android:text="@string/policy"
        android:textColor="#9854A4"
        android:textColorHighlight="#7B1FA2"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="516dp"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/explore"
        android:textColor="#6B85B0"
        android:textSize="18sp"
        app:backgroundTint="#ECF1FC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="278dp"
        android:layout_height="49dp"
        android:layout_marginTop="368dp"
        android:ems="10"
        android:fontFamily="@font/roboto_condensed_bold"
        android:hint="@string/userName"
        android:importantForAutofill="no"
        android:inputType="textCapWords|textPersonName"
        android:textColor="#6B85B0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="353dp"
        android:layout_height="280dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg1" />


</androidx.constraintlayout.widget.ConstraintLayout>